freest/test/prog/Invalid/Typing/UnexpectedTypeParamFun/UnexpectedTypeParamFun.fst
module UnexpectedTypeParamFun where 

foo : Int -> Int
foo @a = 1
